Added the new features

--- a/LMS.UI/Views/Courses/Index.cshtml
+++ b/LMS.UI/Views/Courses/Index.cshtml
@@ -14,7 +14,7 @@
         @foreach (var course in Model)
         {
             <tr>
-                <td><a href="/courses/edit/@course.Id">@course.Name</a></td>
+                <td><a href="/courses/details/@course.Id">@course.Name</a></td>
                 <td>@course.Startdate</td>
                 <td>@course.EndDate</td>
             </tr>
